<resources>
    <string name="app_name">SemanaComputacao</string>
    <string name="semana_da_computa_o">Semana da Computação</string>
    <string name="eventos">Eventos</string>
    <string name="participante">Participante</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cpf">CPF:</string>
    <string name="email">Email:</string>
    <string name="nome">nome</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="nome_completo">Nome Completo:</string>
    <string name="editEmail">Email</string>
    <string name="edtCpf">Cpf:</string>
    <string name="titulo">Titulo:</string>
    <string name="dia">Dia</string>
    <string name="hora">Hora</string>
    <string name="facilitador">Facilitador</string>
    <string name="descricao">Descricao</string>
    <string name="edtDia">Dia</string>
    <string name="edHora">Hora</string>
    <string name="edFacilitador">Facilitador</string>
    <string name="edDescricao">Descricao</string>
    <string name="edDia">Dia:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="txtDescricao">Descricao:</string>
    <string name="edtDescricao">Descricao</string>
    <string name="txtTitulo">Titulo:</string>
    <string name="txtDia">Dia:</string>
    <string name="txtHora">Hora:</string>
    <string name="txtFacilitador">Facilitador:</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="edt_nome">nome</string>
    <string name="edt_email">Email</string>
    <string name="edt_cpf">Cpf</string>
    <string name="cpf">CPF:</string>
    <string name="ed_email">Email</string>
    <string name="alterar">Alterar</string>
    <string name="txtNome">Nome:</string>
    <string name="name">Name</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="name">Name</string>
    <string name="titulo">Titulo:</string>
    <string name="facilitador">Facilitador</string>
    <string name="name">Name</string>
    <string name="descrica">Descricao:</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="hora">Hora</string>
    <string name="dia">Dia</string>
    <string name="edtTitulo">titulo</string>
    <string name="inscricao">Inscricao</string>
    <string name="titulo">Titulo:</string>
    <string name="dia">Dia</string>
    <string name="descricao">Descricao</string>
    <string name="hora">Hora</string>
    <string name="facilitador">Facilitador</string>
    <string name="edicao">Edicao</string>
    <string name="inscricao">Inscricao</string>
</resources>
